# test_glfw3

./: .gitignore  CMakeLists.txt
include/: camera.h  geometry.h  launch.json
include/glad/: glad.h
resources/shaders/: quad.frag  quad.vert
src/: camera.cpp  geometry.cpp  glad.c  main.cpp
